creation posts tested
